# book-share-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: bb8570fb73e5_first_migrations.py
app/: extensions.py  main.py
app/api/helpers/: database.py
app/api/v1/models/: author.py  book.py  user.py
app/core/: config.py  database.py  settings.py
scripts/: build-push-all.sh  process_all.py  test-all.sh
