# pyproject.toml

[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.68.0,<1.0.0"
uvicorn = ">=0.15.0,<1.0.0"
databases = ">=0.4.3,<1.0.0"
sqlalchemy = ">=1.4.0,<2.0.0"
pydantic = ">=1.7.3,<2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"


